--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.13.1"
+    "@netlify/plugin-nextjs": "^4.13.1",
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.3"
   }
 }
